--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "dev": "babel index.js -o run.js -w --source-maps & nodemon -w index.js",
     "build": "babel -o run.js index.js",
     "run": "node run.js",
-    "start": "npm run build; npm run run"
+    "start": "npm run build && npm run run"
   },
   "repository": {
     "type": "git",
