--- a/package.json
+++ b/package.json
@@ -27,6 +27,9 @@
     "lodash": "^4.16.6"
   },
   "devDependencies": {
+    "eslint": "^3.12.0",
+    "eslint-config-airbnb-base": "^10.0.1",
+    "eslint-plugin-import": "^2.2.0",
     "nodemon": "^1.11.0"
   }
 }
