--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   "dependencies": {
     "babel-cli": "^6.18.0",
     "babel-preset-latest": "^6.16.0",
-    "lodash": "^4.16.6"
+    "ramda": "^0.22.1"
   },
   "devDependencies": {
     "eslint": "^3.12.0",
